--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="/about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="/saynotodrug/about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#impact">Impact</a></li>
           <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
           <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
