--- a/about.html
+++ b/about.html
@@ -166,10 +166,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="/about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="/index.html#impact">Impact</a></li>
-          <li class="nav-item"><a class="nav-link" href="/index.html#testimonials">Testimonials</a></li>
-          <li class="nav-item"><a class="nav-link" href="/index.html#faq">FAQ</a></li>
-          <li class="nav-item"><a class="nav-link" href="/index.html#action">Action</a></li>
+          <li class="nav-item"><a class="nav-link" href="/saynotodrug#impact">Impact</a></li>
+          <li class="nav-item"><a class="nav-link" href="/saynotodrugtestimonials">Testimonials</a></li>
+          <li class="nav-item"><a class="nav-link" href="/saynotodrug#faq">FAQ</a></li>
+          <li class="nav-item"><a class="nav-link" href="/saynotodrug#action">Action</a></li>
         </ul>
       </div>
     </div>
