--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
           <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
           <li class="nav-item"><a class="nav-link" href="#action">Action</a></li>
-          <li class="nav-item"><a class="nav-link" href="/contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="/saynotodrug/contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
